# Invernadero

./: README.md  materiales.md
diagrams/: .$Invernadero.drawio.bkp  Invernadero.drawio
src/dht22/: CMakeLists.txt
src/dht22/main/: main.c
src/invernadero_esp32/: #README.md#  CMakeLists.txt
src/invernadero_esp32/main/: CMakeLists.txt  main.cpp
src/invernadero_esp32/main/includes/: actuador_interfaz.cpp  actuador_interfaz.h  coordinador.cpp  coordinador.h  fsm.cpp  fsm.h  fsm_ambiental.cpp  fsm_ambiental.h  fsm_luz.cpp  fsm_luz.h  fsm_sustrato.cpp  fsm_sustrato.h  sensor_capacitive_soil.cpp  sensor_capacitive_soil.h  sensor_dht22.cpp  sensor_dht22.h  sensor_interfaz.cpp  sensor_interfaz.h  sensor_luz.cpp  sensor_luz.h
src/invernadero_esp32/main/reserva/: actuador_interfaz.cpp  actuador_interfaz.h  coordinador.cpp  coordinador.h  fsm.cpp  fsm.h  main.cpp  sensor_dht22.cpp  sensor_dht22.h  sensor_interfaz.cpp  sensor_interfaz.h
